<resources>
    <string name="app_name">Batalha Naval</string>
    <string name="action_settings">Settings</string>
    <string name="submarino">Submarino (%d/%d)</string>
    <string name="porta_aviao">Porta Avião (%d/%d)</string>
    <string name="contra_torpedeiro">Contra Torpedeiro (%d/%d)</string>
    <string name="navio_tanque">Navio Tanque (%d/%d)</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="confirmar">Confirmar</string>
    <string name="orientacao">Orientação</string>
    <string name="navio">Navio</string>
    <string name="tabuleiro_posicao_invalida">Posiçao invalida.</string>
    <string name="tabuleiro_limite_atingido">Quantidade máxima de %s atingida.</string>
    <string name="tabuleiro_conflito_posicao">Posiçao conflitante.</string>
    <string name="jogar">Jogar</string>

</resources>
