<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:id="@+id/menuNavio"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:behavior_hideable="true"
             android:background="#3000"
             app:behavior_peekHeight="0dp"
             app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    >

    <LinearLayout
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/branco"
                  android:orientation="vertical"
                  android:layout_gravity="bottom"
                  android:padding="@dimen/item_selecao_padding"
                  >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_selecao_title_margin_top"
            android:text="@string/navio"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/item_selecao_title_text_size"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/idNavioTanque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/navio_tanque"/>

            <RadioButton
                android:id="@+id/idContraTorpedeiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contra_torpedeiro"/>

            <RadioButton
                android:id="@+id/idPortaAviao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/porta_aviao"/>

            <RadioButton
                android:id="@+id/idSubmarino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submarino"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_selecao_title_margin_top"
            android:text="@string/orientacao"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/item_selecao_title_text_size"
            android:textStyle="bold"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/idHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/horizontal"/>

            <RadioButton
                android:id="@+id/idVertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vertical"/>
        </RadioGroup>

        <Button
            android:id="@+id/idConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_selecao_botao_confirmar"
            android:text="@string/confirmar"/>

    </LinearLayout>
</FrameLayout>
